[TRIVIAL] add page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/prism.css">
+  <link rel="stylesheet" href="docs/css/main.css">
+  <link rel="stylesheet" href="docs/css/prism.css">
 </head>
 
 <body>
@@ -50,8 +50,8 @@ type Extra {
       </table>
     </div>
   </div>
-  <script src="js/prism.js"></script>
-  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="docs/js/prism.js"></script>
+  <script src="docs/js/jquery-3.3.1.min.js"></script>
   <script>
     console.log("index is in root dir")
     $('#json-src').change(function() {
